# gtasks

./: .gitignore  README.md  pyproject.toml  quickstart.py
gtasks/: app.py
gtasks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
gtasks/commands/: choose.py  view.py
gtasks/src/: .tasklist.py.swo  auth.py  task.py  tasklist.py  ticketlist.py
