[build-system]
requires = [
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "gtasks"
version = "0.0.1"
authors = [
  { name="Chris Reisor", email="creisor@gmail.com" },
]
description = "A commandline interface for Google Tasks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]
dependencies = [
  'Click',
  'google-api-python-client',
  'google-auth-httplib2',
  'google-auth-oauthlib',
  'jira >= 3.8',
]

[project.scripts]
gtasks = "gtasks.app:main"

[project.urls]
"Homepage" = "https://github.com/creisor/gtasks"
"Bug Tracker" = "https://github.com/creisor/gtasks/issues"

[tool.setuptools]
packages = ["gtasks", "gtasks.commands"]
